Bug 434708 When creating folders don't iterate the directory whilst we are changing its contents, and remove a couple of bogus warnings. Patch originally by hwaara, updated by me. r/sr=bienvenu